fix article not stretching to fill grid cell

--- a/assets/sass/layouts/_article.scss
+++ b/assets/sass/layouts/_article.scss
@@ -34,6 +34,7 @@
 
   &__article {
     grid-area: main;
+    width: 100%;
     max-width: 40em;
     margin: 0 auto;
   }
